# otai

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/skills/otai/: SKILL.md
.github/workflows/: check.yaml
issues/: 01-bootstrap-cli-list-releases.md  02-croissant-list-datasets.md  03-describe-dataset.md  04-guarded-run-sql-latest.md  05-cross-release-run-sql.md  06-claude-code-skill.md  07-query-complexity-guard.md
src/otai/: __init__.py  catalog.py  cli.py  commands.py  config.py  croissant.py  envelope.py  formatting.py  json_cache.py  logging_setup.py  releases.py  schema_builder.py  sql_guard.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_commands.py  test_config.py  test_croissant.py  test_envelope.py  test_formatting.py  test_json_cache.py  test_logging_setup.py  test_releases.py  test_schema_builder.py  test_sql_guard.py
