[project]
name = "otai"
version = "0.1.0"
description = "Open Targets Agentic Query Tool - CLI for querying Open Targets Platform release data"
readme = "PRD.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "duckdb>=0.10",
]

[project.scripts]
otai = "otai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otai"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
